dto fixes